kubernetes/kustomize/manifest.yaml
---
# Source: scenescape-chart/templates/broker-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker
  annotations:
    {}
spec:
  selector:
    app: release-name-broker
  ports:
  - name: "1883"
    protocol: TCP
    port: 1883
    targetPort: 1883
  - name: "1884"
    protocol: TCP
    port: 1884
    targetPort: 1884
---
# Source: scenescape-chart/templates/broker-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-np
  annotations:
    {}
spec:
  type: NodePort
  selector:
    app: release-name-broker
  ports:
  - name: "1883"
    protocol: TCP
    port: 1883
    targetPort: 1883
    nodePort: 31883
---
# Source: scenescape-chart/templates/ntp-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntpserv
spec:
  selector:
    app: release-name-ntpserv
  ports:
    - protocol: UDP
      port: 123
      targetPort: 123
---
# Source: scenescape-chart/templates/pgserver-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgserver
spec:
  selector:
    app: release-name-pgserver
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
# Source: scenescape-chart/templates/vdms-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: vdms
spec:
  selector:
    app: release-name-vdms
  ports:
  - name: "55555"
    protocol: TCP
    port: 55555
    targetPort: 55555
---
# Source: scenescape-chart/templates/web-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    {}
spec:
  selector:
    app: release-name-web
  ports:
  - name: "80"
    protocol: TCP
    port: 80
    targetPort: 80
  - name: "443"
    protocol: TCP
    port: 443
    targetPort: 443
---
# Source: scenescape-chart/templates/web-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  annotations:
    {}
spec:
  type: LoadBalancer
  selector:
    app: release-name-web
  ports:
  - name: "443"
    protocol: TCP
    port: 443
    targetPort: 443
  externalTrafficPolicy: Local
---
# Source: scenescape-chart/templates/broker-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-broker-dep
  labels:
    app: release-name-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-broker
  template:
    metadata:
      labels:
        app: release-name-broker
    spec:
      shareProcessNamespace: true
      containers:
        - image: 10.190.167.131:5001/scenescape-broker:1.4.0-alpha
          name: release-name-broker
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            periodSeconds: 1
          ports:
          - containerPort: 1883
          - containerPort: 1884
          resources: {}
          volumeMounts:
          - mountPath: /run/secrets/scenescape-broker.key
            name: scenescape-broker-key
            readOnly: true
            subPath: scenescape-broker.key
          - mountPath: /run/secrets/scenescape-broker.crt
            name: scenescape-broker-crt
            readOnly: true
            subPath: scenescape-broker.crt
      restartPolicy: Always
      volumes:
      - name: scenescape-broker-key
        secret:
          secretName: release-name-scenescape-broker.key
      - name: scenescape-broker-crt
        secret:
          secretName: release-name-scenescape-broker.crt
status: {}
---
# Source: scenescape-chart/templates/camcalibration-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-camcalibration-dep
  labels:
    app: release-name-camcalibration
  annotations:
    container.apparmor.security.beta.kubernetes.io/camcalibration: unconfined
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-camcalibration
  template:
    metadata:
      labels:
        app: release-name-camcalibration
    spec:
      shareProcessNamespace: true
      containers:
        - args:
          - camcalibration
          - --broker
          - broker.default
          - --resturl
          - https://web.default/api/v1
          image: 10.190.167.131:5001/scenescape-camcalibration:1.4.0-alpha
          name: release-name-camcalibration
          imagePullPolicy: Always
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            periodSeconds: 1
          resources: {}
          volumeMounts:
          - mountPath: /dev/fuse
            name: dev-fuse
          - mountPath: /run/secrets/certs
            name: certs
            readOnly: true
          - mountPath: /run/secrets/django
            name: django
            readOnly: true
          - mountPath: /run/secrets/calibration.auth
            name: calibration-auth
            readOnly: true
            subPath: calibration.auth
          - mountPath: /workspace/media
            name: media-storage
          - mountPath: /workspace/datasets
            name: datasets-storage
      restartPolicy: Always
      volumes:
      - name: dev-fuse
        hostPath:
          path: /dev/fuse
      - name: certs
        secret:
          secretName: release-name-certs
      - name: django
        secret:
          secretName: release-name-django
      - name: calibration-auth
        secret:
          secretName: release-name-calibration.auth
      - name: media-storage
        persistentVolumeClaim:
          claimName: release-name-media-pvc
      - name: datasets-storage
        persistentVolumeClaim:
          claimName: release-name-datasets-pvc
status: {}
---
# Source: scenescape-chart/templates/kubeclient-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubeclient-dep
  labels:
    app: release-name-kubeclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-kubeclient
  template:
    metadata:
      labels:
        app: release-name-kubeclient
    spec:
      shareProcessNamespace: true
      containers:
        - args:
          - ./manage.py
          - kubecommand
          - --broker
          - broker.default
          - --resturl
          - https://web.default/api/v1
          - --ntp
          - ntpserv.default
          - --auth
          - /run/secrets/percebro.auth
          image: 10.190.167.131:5001/scenescape-manager:1.4.0-alpha
          name: release-name-kubeclient
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            periodSeconds: 1
          resources: {}
          volumeMounts:
          - mountPath: /run/secrets/certs
            name: certs
            readOnly: true
          - mountPath: /run/secrets/django
            name: django
            readOnly: true
          - mountPath: /run/secrets/percebro.auth
            name: percebro-auth
            readOnly: true
            subPath: percebro.auth
      restartPolicy: Always
      serviceAccountName: release-name-kubeclient-sa
      volumes:
      - name: certs
        secret:
          secretName: release-name-certs
      - name: django
        secret:
          secretName: release-name-django
      - name: percebro-auth
        secret:
          secretName: release-name-percebro.auth
status: {}
---
# Source: scenescape-chart/templates/ntp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ntp-dep
  labels:
    app: release-name-ntpserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-ntpserv
  template:
    metadata:
      labels:
        app: release-name-ntpserv
    spec:
      shareProcessNamespace: true
      containers:
        - image: dockurr/chrony
          name: release-name-ntpserv
          imagePullPolicy: Always
          ports:
          - containerPort: 123
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            periodSeconds: 1
          volumeMounts:
          - name: healthy-file
            mountPath: /tmp
          resources: {}
      restartPolicy: Always
      volumes:
      - name: healthy-file
        emptyDir: {}
status: {}
---
# Source: scenescape-chart/templates/pgserver-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pgserver-dep
  labels:
    app: release-name-pgserver
  annotations:
    container.apparmor.security.beta.kubernetes.io/pgserver: unconfined
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-pgserver
  template:
    metadata:
      labels:
        app: release-name-pgserver
    spec:
      shareProcessNamespace: true
      containers:
        - args:
          - database
          - --preloadexample
          image: 10.190.167.131:5001/scenescape-manager:1.4.0-alpha
          name: release-name-pgserver
          imagePullPolicy: Always
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
          ports:
          - containerPort: 5432
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            periodSeconds: 1
          resources: {}
          volumeMounts:
          - mountPath: /dev/fuse
            name: dev-fuse
          - mountPath: /run/secrets/django
            name: django
            readOnly: true
          - mountPath: /run/secrets/controller.auth
            name: controller-auth
            readOnly: true
            subPath: controller.auth
          - mountPath: /run/secrets/percebro.auth
            name: percebro-auth
            readOnly: true
            subPath: percebro.auth
          - mountPath: /run/secrets/browser.auth
            name: browser-auth
            readOnly: true
            subPath: browser.auth
          - mountPath: /run/secrets/calibration.auth
            name: calibration-auth
            readOnly: true
            subPath: calibration.auth
          - mountPath: /run/secrets/scenescape-ca-pem
            name: scenescape-ca-pem
            readOnly: true
            subPath: scenescape-ca.pem
          - mountPath: /workspace
            name: pgserver-storage
            subPath: workspace
          - mountPath: /workspace/media
            name: media-storage
          - mountPath: /home/scenescape/SceneScape/sample_data
            name: sample-data-storage
            subPath: sample_data
          - mountPath: /home/scenescape/SceneScape/user_access_config.json
            name: user-access-config-storage
            subPath: user_access_config.json
      restartPolicy: Always
      volumes:
      - name: dev-fuse
        hostPath:
          path: /dev/fuse
      - name: django
        secret:
          secretName: release-name-django
      - name: controller-auth
        secret:
          secretName: release-name-controller.auth
      - name: percebro-auth
        secret:
          secretName: release-name-percebro.auth
      - name: browser-auth
        secret:
          secretName: release-name-browser.auth
      - name: calibration-auth
        secret:
          secretName: release-name-calibration.auth
      - name: scenescape-ca-pem
        secret:
          secretName: release-name-scenescape-ca.pem
      - name: pgserver-storage
        persistentVolumeClaim:
          claimName: release-name-pgserver-pvc
      - name: media-storage
        persistentVolumeClaim:
          claimName: release-name-media-pvc
      - name: sample-data-storage
        persistentVolumeClaim:
          claimName: release-name-sample-data-pvc
      - name: user-access-config-storage
        persistentVolumeClaim:
          claimName: release-name-user-access-config-pvc
status: {}
---
# Source: scenescape-chart/templates/scene-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-scene-dep
  labels:
    app: release-name-scene
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-scene
  template:
    metadata:
      labels:
        app: release-name-scene
    spec:
      shareProcessNamespace: true
      containers:
        - args:
          - controller
          - --broker
          - broker.default
          - --resturl
          - https://web.default/api/v1
          - --ntp
          - ntpserv.default
          image: 10.190.167.131:5001/scenescape-controller:1.4.0-alpha
          name: release-name-scene
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 1
          resources: {}
          volumeMounts:
          - mountPath: /run/secrets/certs
            name: certs
            readOnly: true
          - mountPath: /run/secrets/django
            name: django
            readOnly: true
          - mountPath: /run/secrets/controller.auth
            name: controller-auth
            readOnly: true
            subPath: controller.auth
          - mountPath: /home/scenescape/SceneScape/media
            name: media-storage
          - mountPath: /home/scenescape/SceneScape/tracker-config.json
            name: controller-storage
            subPath: tracker-config.json
      restartPolicy: Always
      volumes:
      - name: certs
        secret:
          secretName: release-name-certs
      - name: django
        secret:
          secretName: release-name-django
      - name: controller-auth
        secret:
          secretName: release-name-controller.auth
      - name: media-storage
        persistentVolumeClaim:
          claimName: release-name-media-pvc
      - name: controller-storage
        persistentVolumeClaim:
          claimName: release-name-controller-pvc
status: {}
---
# Source: scenescape-chart/templates/vdms-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-vdms-dep
  labels:
    app: release-name-vdms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-vdms
  template:
    metadata:
      labels:
        app: release-name-vdms
    spec:
      shareProcessNamespace: true
      containers:
        - image: intellabs/vdms:latest
          name: release-name-vdms
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
          - mountPath: /run/secrets/certs
            name: certs
            readOnly: true
      restartPolicy: Always
      volumes:
      - name: certs
        secret:
          secretName: release-name-certs
status: {}
---
# Source: scenescape-chart/templates/web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-web-dep
  labels:
    app: release-name-web
  annotations:
    container.apparmor.security.beta.kubernetes.io/web: unconfined
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-web
  template:
    metadata:
      labels:
        app: release-name-web
    spec:
      shareProcessNamespace: true
      containers:
        - args:
          - webserver
          - --dbhost
          - pgserver.default
          - --broker
          - broker.default
          - --brokerauth
          - /run/secrets/browser.auth
          - --brokerrootcert
          - /run/secrets/certs/scenescape-ca.pem
          image: 10.190.167.131:5001/scenescape-manager:1.4.0-alpha
          name: release-name-web
          imagePullPolicy: Always
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
          ports:
          - containerPort: 443
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            periodSeconds: 1
          resources: {}
          volumeMounts:
          - mountPath: /dev/fuse
            name: dev-fuse
          - mountPath: /run/secrets/certs
            name: certs
            readOnly: true
          - mountPath: /run/secrets/django
            name: django
            readOnly: true
          - mountPath: /run/secrets/browser.auth
            name: browser-auth
            readOnly: true
            subPath: browser.auth
          - mountPath: /workspace/media
            name: media-storage
          - mountPath: /home/scenescape/SceneScape/models
            name: models-storage
      restartPolicy: Always
      volumes:
      - name: dev-fuse
        hostPath:
          path: /dev/fuse
      - name: certs
        secret:
          secretName: release-name-certs
      - name: django
        secret:
          secretName: release-name-django
      - name: browser-auth
        secret:
          secretName: release-name-browser.auth
      - name: media-storage
        persistentVolumeClaim:
          claimName: release-name-media-pvc
      - name: models-storage
        persistentVolumeClaim:
          claimName: release-name-models-pvc
status: {}
---
# Source: scenescape-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web
            port:
              number: 80
#      - pathType: Prefix
#        path: /mqtt
#        backend:
#          service:
#            name: broker
#            port:
#              number: 1884
